src/test/ui/consts/const-mut-refs/issue-76510.32bit.stderr
error[E0764]: mutable references are not allowed in the final value of constants
  --> $DIR/issue-76510.rs:5:29
   |
LL | const S: &'static mut str = &mut " hello ";
   |                             ^^^^^^^^^^^^^^

error[E0658]: mutation through a reference is not allowed in constants
  --> $DIR/issue-76510.rs:5:29
   |
LL | const S: &'static mut str = &mut " hello ";
   |                             ^^^^^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0596]: cannot borrow data in a `&` reference as mutable
  --> $DIR/issue-76510.rs:5:29
   |
LL | const S: &'static mut str = &mut " hello ";
   |                             ^^^^^^^^^^^^^^ cannot borrow as mutable

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-76510.rs:11:70
   |
LL |         let s = transmute::<(*const u8, usize), &ManuallyDrop<str>>((S.as_ptr(), 3));
   |                                                                      ^ referenced constant has errors

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0080, E0596, E0658, E0764.
For more information about an error, try `rustc --explain E0080`.
